--- a/company.html
+++ b/company.html
@@ -28,6 +28,72 @@
     <p class="readtext">ハッピーリフォームの会社概要、アクセスをご紹介します。</p>
     <div class="model-inner">
       <h2>会社概要</h2>
+      <table class="company-table model-table type-th-gray">
+        <tbody>
+          <tr>
+            <th>名称</th>
+            <td>ハッピーリフォーム株式会社</td>
+          </tr>
+          <tr>
+            <th>事業内容</th>
+            <td>家屋、キッチンのリフォーム、改築・解体、キッチン設備の販売・施工</td>
+          </tr>
+          <tr>
+            <th>代表者</th>
+            <td>代表取締役 渡辺 雄一</td>
+          </tr>
+          <tr>
+            <th>所在地</th>
+            <td>〒650-0046　兵庫県神戸市中央区港島6-11-1</td>
+          </tr>
+          <tr>
+            <th>創業</th>
+            <td>1985年4月</td>
+          </tr>
+          <tr>
+            <th>資本金</th>
+            <td>10,000,000円</td>
+          </tr>
+          <tr>
+            <th>電話番号</th>
+            <td>0XX-XXX-XXXX（代表）</td>
+          </tr>
+        </tbody>
+      </table>
+    </div> 
+    <div id="access" class="access-data model-inner">
+      <h2>アクセス・営業情報</h2>
+      <div class="acs-cont model-flex type-top">
+        <div class="acs-item1">
+          <table class="business-table model-table type-th-gray">
+            <tbody>
+              <tr>
+                <th>営業時間</th>
+                <td>10:00 - 18:00</td>
+              </tr>
+              <tr>
+                <th>休業日</th>
+                <td>毎週水曜日　年末年始</td>
+              </tr>
+              <tr>
+                <th>電話番号</th>
+                <td>0XX-XXX-XXXX</td>
+              </tr>
+              <tr>
+                <th>住所</th>
+                <td>兵庫県神戸市中央区港島中町6-11-1</td>
+              </tr>
+            </tbody>
+          </table>
+          <img class="shopimg" src="image/company/tennpo.jpeg" alt="" width="400">
+        </div>
+        <div class="acs-item2">
+          <iframe class="map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.60386184683!2d135.20933867574286!3d34.66470597293248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008e1a422dcff1%3A0x25621ed085553cfe!2z44CSNjUwLTAwNDYg5YW15bqr55yM56We5oi45biC5Lit5aSu5Yy65riv5bO25Lit55S677yW5LiB55uu77yR77yR4oiS77yRIDPlj7fppKg!5e0!3m2!1sja!2sjp!4v1736994735055!5m2!1sja!2sjp"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
     </div>
   </main>
   <footer class="main-footer">
