--- a/guide.html
+++ b/guide.html
@@ -46,6 +46,36 @@
         </li>
       </ol>
     </div>
+    <div class="model-inner">
+      <h2>キッチンリフォームのポイント</h2>
+      <dl class="point-list dl-list">
+        <dt>収納</dt>
+        <dd>効率的な収納スペースの確保はとても大切です。ホットプレートなどサイズの大きな調理器具も十分に収納できるスペースを確保しておくと後で困りません。</dd>
+        <dt>動線</dt>
+        <dd>調理の流れがスムーズになるような動線で設計を考えましょう。リフォームするキッチンだけでなく冷蔵庫や食器棚などのレイアウトも考慮すると時短につながります。</dd>
+        <dt>安全性</dt>
+        <dd>お子さんや高齢者の方も安心して使えるようなキッチンにしましょう。安全性の高い機器や設計にすることで家族みんなが安心して集まれるキッチンになります。</dd>
+        <dt>照明</dt>
+        <dd>調理しやすい明るさに照明を変えることでスムーズな調理と心地よい雰囲気を作り出すことができます。明るさが一定以上保たれているキッチンでは細かい調理作業の効率がアップしたという調査結果もあります。</dd>
+      </dl>
+    </div>
+    <div class="model-inner">
+      <h2>キッチンリフォームの注意点</h2>
+      <dl class="caution-list dl-list">
+        <dt>法規制の確認</dt>
+        <dd>
+          リフォームをするうえで建築基準法などの法規制を遵守する必要があります。火災やけがなどの被害に合わないようにしっかりと法令を遵守した提案をする業者を選んでください。ハッピーリフォームでは法令を遵守したうえでお客様のリフォームプランをご提案します。
+        </dd>
+        <dt>契約内容の確認</dt>
+        <dd>
+          工事内容、費用、工期などをしっかりとご確認のうえ契約するようにしてください。提案内容や契約内容に不明な点があるときは遠慮なく確認しましょう。ハッピーリフォームでは事前にご説明をしっかりと行い、お客様にご納得いただいたうえでご契約を進めます。
+        </dd>
+        <dt>施工業者の選定</dt>
+        <dd>
+          工期が著しく遅れたり、仕上がりに満足できなかったり、追加費用が発生したりなどのトラブルが起きないように信頼できる施工業者を選定しましょう。ハッピーリフォームは実績ある熟練の職人が施工を受け持ちます。地域で1万件以上の施工実績を持つため豊富なノウハウも自慢です。
+        </dd>
+      </dl>
+    </div>
   </main>
   <footer class="main-footer">
     <a href="index.html">
