--- a/works.html
+++ b/works.html
@@ -26,8 +26,27 @@
   <main>
     <h1>施工事例</h1>
     <p class="readtext">リフォームでお困りごとが解決したお客様の施工事例をご紹介します。</p>
-    <div class="model-inner">
-      
+    <div class="works-cont model-inner model-flex type-top">
+      <nav class="sidenav">
+        <p>ご覧になりたい事例を選んでください。</p>
+        <ul>
+          <li><a href="#reformcase-1">Reform #1</a></li>
+          <li><a href="#reformcase-2">Reform #2</a></li>
+          <li><a href="#reformcase-3">Reform #3</a></li>
+          <li><a href="#reformcase-4">Reform #4</a></li>
+          <li><a href="#reformcase-5">Reform #5</a></li>
+          <li><a href="#reformcase-6">Reform #6</a></li>
+          <li><a href="#reformcase-7">Reform #7</a></li>
+          <li><a href="#reformcase-8">Reform #8</a></li>
+          <li><a href="#reformcase-9">Reform #9</a></li>
+        </ul>
+      </nav>
+      <div class="contents">
+        <div id="reformcase-1" class="reformcase-wrap">
+          <h2><span class="number">Reform #1</span>F様邸キッチンリフォーム</h2>
+          <p class="date">施工完了日:2023.05.05</p>
+        </div>
+      </div>
     </div>
   </main>
   <footer class="main-footer">
